// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InviteCollaborator RecipientContainer > displays an avatar image if capability is present 1`] = `
"<span class="oc-recipient files-share-invite-recipient" data-testid="recipient-container-Albert Einstein"><span class="vue-avatar--wrapper oc-avatar" style="width: 16.8px; height: 16.8px; line-height: 16.8px; background-color: #c21c53; font-size: 6px; font-family: Helvetica, Arial, sans-serif; color: white;" width="16.8" aria-hidden="true" focusable="false" data-test-user-name="Albert Einstein"><span class="avatar-initials" style="color: white;">AE</span></span>
<p class="oc-recipient-name" data-testid="recipient-name">Albert Einstein</p> <!-- @slot Append content (actions, additional info, etc.)  --> <button type="button" aria-label="Deselect Albert Einstein" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw files-share-invite-recipient-btn-remove raw-hover-surface">
  <!--v-if-->
  <!-- @slot Content of the button -->
  <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="small" type="span"></oc-icon-stub>
</button></span>"
`;

exports[`InviteCollaborator RecipientContainer > renders a recipient with a deselect button > different recipients for different shareTypes 1`] = `
"<span class="oc-recipient files-share-invite-recipient" data-testid="recipient-container-Albert Einstein"><span class="vue-avatar--wrapper oc-avatar" style="width: 16.8px; height: 16.8px; line-height: 16.8px; background-color: #c21c53; font-size: 6px; font-family: Helvetica, Arial, sans-serif; color: white;" width="16.8" aria-hidden="true" focusable="false" data-test-user-name="Albert Einstein"><span class="avatar-initials" style="color: white;">AE</span></span>
<p class="oc-recipient-name" data-testid="recipient-name">Albert Einstein</p> <!-- @slot Append content (actions, additional info, etc.)  --> <button type="button" aria-label="Deselect Albert Einstein" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw files-share-invite-recipient-btn-remove raw-hover-surface">
  <!--v-if-->
  <!-- @slot Content of the button -->
  <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="small" type="span"></oc-icon-stub>
</button></span>"
`;

exports[`InviteCollaborator RecipientContainer > renders a recipient with a deselect button > different recipients for different shareTypes 2`] = `
"<span class="oc-recipient files-share-invite-recipient" data-testid="recipient-container-Albert Einstein"><div data-test-item-name="Group" aria-label="Group" role="img" data-testid="recipient-icon"><span class="oc-avatar-item" style="background-color: var(--oc-role-secondary); --icon-color: var(--oc-role-on-secondary); --width: 16.8px;"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="group" size="small" type="span"></oc-icon-stub></span></div>
<p class="oc-recipient-name" data-testid="recipient-name">Albert Einstein</p> <!-- @slot Append content (actions, additional info, etc.)  --> <button type="button" aria-label="Deselect Albert Einstein" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw files-share-invite-recipient-btn-remove raw-hover-surface">
  <!--v-if-->
  <!-- @slot Content of the button -->
  <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="small" type="span"></oc-icon-stub>
</button></span>"
`;

exports[`InviteCollaborator RecipientContainer > renders a recipient with a deselect button > different recipients for different shareTypes 3`] = `
"<span class="oc-recipient files-share-invite-recipient" data-testid="recipient-container-Albert Einstein"><div data-test-item-name="Guest user" aria-label="Guest user" role="img" data-testid="recipient-icon"><span class="oc-avatar-item" style="background-color: var(--oc-role-secondary); --icon-color: var(--oc-role-on-secondary); --width: 16.8px;"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="global" size="small" type="span"></oc-icon-stub></span></div>
<p class="oc-recipient-name" data-testid="recipient-name">Albert Einstein</p> <!-- @slot Append content (actions, additional info, etc.)  --> <button type="button" aria-label="Deselect Albert Einstein" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw files-share-invite-recipient-btn-remove raw-hover-surface">
  <!--v-if-->
  <!-- @slot Content of the button -->
  <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="small" type="span"></oc-icon-stub>
</button></span>"
`;

exports[`InviteCollaborator RecipientContainer > renders a recipient with a deselect button > different recipients for different shareTypes 4`] = `
"<span class="oc-recipient files-share-invite-recipient" data-testid="recipient-container-Albert Einstein"><div data-test-item-name="External user" aria-label="External user" role="img" data-testid="recipient-icon"><span class="oc-avatar-item" style="background-color: var(--oc-role-secondary); --icon-color: var(--oc-role-on-secondary); --width: 16.8px;"><oc-icon-stub accessiblelabel="" color="" filltype="fill" name="earth" size="small" type="span"></oc-icon-stub></span></div>
<p class="oc-recipient-name" data-testid="recipient-name">Albert Einstein</p> <!-- @slot Append content (actions, additional info, etc.)  --> <button type="button" aria-label="Deselect Albert Einstein" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-secondary oc-button-raw oc-button-secondary-raw files-share-invite-recipient-btn-remove raw-hover-surface">
  <!--v-if-->
  <!-- @slot Content of the button -->
  <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="close" size="small" type="span"></oc-icon-stub>
</button></span>"
`;
